@@ -113,7 +113,7 @@ $TCA['tx_recordsmanager_config'] = array(
 			'label' => 'LLL:EXT:recordsmanager/locallang_db.xml:tx_recordsmanager_config.sqlfieldsinsert',
 			'config' => Array(
 				'type' => 'select',
-				'itemsProcFunc' => 'tx_recordsmanager_flexfill->getFields',
+				'itemsProcFunc' => 'tx_recordsmanager_flexfill->getEditFields',
 				'minitems' => 0,
 				'maxitems' => 500,
 				'size' => 10,
